--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -4,6 +4,8 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import "_nav.css";
+
 [x-cloak] {
     display: none !important;
 }
