--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @import "tailwindcss/base";
+@import "_locomotive.css";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
